exports[`Position > constants > Should initialize correctly 1`] = `
{
  "line": 0,
  "character": 0
}
`;

exports[`Position > constants > Should initialize correctly 2`] = `
{
  "line": null,
  "character": null
}
`;

exports[`Position > create() > Should create correctly 1`] = `
{
  "line": 1,
  "character": 2
}
`;

exports[`Position > create() > Should create correctly 2`] = `
{
  "line": 0,
  "character": 0
}
`;

exports[`Position > create() > Should create correctly 3`] = `
{
  "line": 1,
  "character": 0
}
`;

exports[`Position > create() > Should create correctly 4`] = `
{
  "line": 0,
  "character": 2
}
`;

exports[`Position > create() > Should create correctly 5`] = `
{
  "line": 1,
  "character": 2
}
`;
